--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.5",
+    "jsbarcode": "^3.11.6",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-barcode": "^1.5.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
