--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "rateease-app",
   "version": "0.1.0",
@@ -33,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.5",
     "jsbarcode": "^3.11.6",
@@ -61,3 +63,5 @@
     "typescript": "^5"
   }
 }
+
+    
