--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsbarcode": "^3.11.6",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
