--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-to-print": "^2.15.1",
+    "react-wrap-balancer": "^1.1.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
